--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,17 @@ beautifulsoup4==4.13.4
 bs4==0.0.2
 certifi==2025.1.31
 charset-normalizer==3.4.1
+contourpy==1.3.2
+cycler==0.12.1
 DateTime==5.5
 ephem==4.2
+fonttools==4.57.0
 idna==3.10
+kiwisolver==1.4.8
+matplotlib==3.10.1
 MouseInfo==0.1.3
 numpy==2.2.5
+packaging==25.0
 pandas==2.2.3
 pillow==11.2.1
 PyAutoGUI==0.9.54
@@ -15,6 +21,7 @@ PyMsgBox==1.0.9
 pyobjc-core==11.0
 pyobjc-framework-Cocoa==11.0
 pyobjc-framework-Quartz==11.0
+pyparsing==3.2.3
 pyperclip==1.9.0
 PyRect==0.2.0
 PyScreeze==1.0.1
